Updated Name and Description

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="home_page">
                 <div class="home_heading" id="Home">
                     <!-- Edit here 👇 Change "GDSC IIIT Kalyani" to your own name -->
-                    <div class="intro">Hello <br>I'm <br>GDSC IIIT Kalyani</div>
+                    <div class="intro">Hello <br>I'm <br>Rajdeep Chakraborty</div>
                     <!-- Edit here 👇 Add an interesting bio here. Your instagram bio works too  😉 -->
-                    <div class="sub_heading">Lorem, ipsum dolor sit amet consectetur adipisicing elit</div>
+                    <div class="sub_heading">Trying to be better</div>
                 </div>
                 <div class="profile_pic">
                     <!-- Edit here 👇 Add your own photo here. Simply download it in the assets folder and update the filename "pfp.png" to match your image's filename -->
@@ -57,12 +57,12 @@
                         <div class="about_me_contents">
                             BIRTHDAY
                             <!-- Edit here 👇 Add your birthday -->
-                            <span>15th July 2020</span>
+                            <span>29th February 1969</span>
                         </div>
                         <div class="about_me_contents">
                             EMAIL
                             <!-- Edit here 👇 Add your email instead of "dsc.iiitkalyani@gmail.com" -->
-                            <span>dsc.iiitkalyani@gmail.com</span>
+                            <span>NoU@gmail.com</span>
                         </div>
                         <div class="about_me_contents">
                             PHONE
@@ -72,7 +72,7 @@
                         <div class="about_me_contents">
                             LOCATION
                             <!-- Edit here 👇 Add your location -->
-                            <span>Kalyani, West Bengal</span>
+                            <span>Kolkata, West Bengal</span>
                         </div>
                         <div class="about_me_contents">
                             CONNECT WITH ME
@@ -104,9 +104,7 @@
                         </div>
                         <!-- Edit here 👇 Write something about yourself. Something that will help people know you better -->
                         <div class="description">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequatur atque maxime
-                            corrupti debitis, quas magnam autem. Mollitia ipsa illo cumque vero, maxime sunt aut autem
-                            voluptate, iste perspiciatis ducimus.
+                            I am an aspiring Computer Science Undergrad with a passion for innovative technology solutions and a keen interest in sustainable development. I am eager to contribute to impactful projects that leverage technology to create positive change. Apart from Tech stuff, I also love gardening and volleyball.
                         </div>
                     </div>
                 </div>
