Added: my pfp in the website

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="profile_pic">
                     <!-- Edit here 👇 Add your own photo here. Simply download it in the assets folder and update the filename "pfp.png" to match your image's filename -->
-                    <img src="./assets/pfp.png">
+                    <img src="./assets/my_pfp.jpg">
                 </div>
             </div>
 
